crates/templates/src/snapshots/templates__tests__usage_sh-10.snap
---
source: crates/templates/src/lib.rs
expression: output
---
cli_usage() {
  if [[ -n "Test simple usage" ]]; then
    printf "Test simple usage\n\n"
  fi

  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n\n"
  printf "Options:\n"
  printf "  -a --all\n"
  printf "    Test option with all attributes\n"
  printf "    [@required, @multiple, @default foo, @choices foo, bar, baz]\n"
}

