crates/templates/src/snapshots/templates__tests__usage_sh.snap
---
source: crates/templates/src/lib.rs
expression: output
---
cli_usage() {
  if [[ -n "Test simple usage" ]]; then
    printf "Test simple usage\n\n"
  fi

  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n\n"
}

